--- a/AngularWebService/src/app/app.component.html
+++ b/AngularWebService/src/app/app.component.html
@@ -4,11 +4,11 @@
     Welcome to {{title}}!
   </h1>
 </div>
-
+<br/>
+<h3>Lista de Colores</h3>
 <button (click)="funcion_mostrar()"name="btn_list" >{{showCont ? 'ocultar':'mostrar' }}</button>
-
+<br/>
 <div class="lista_colores" *ngIf="showCont">
-  <h3>Lista de Colores</h3>
   <div>
         <ul>
           <li *ngFor="let color of colores">
@@ -19,3 +19,25 @@
    <input style="margin-top:1rem" #color type="text" placeholder="Nombre del color" name="color">
   </form>
 </div>
+<br/>
+<br/>
+Vista
+<br/>
+<button (click)="funcion_mostrarpost()"name="btn_post" >{{showCont ? 'ocultar':'mostrar' }}</button>
+<div *ngIf="showCont2">
+  <h3>Post</h3>
+  <div *ngFor = "let post of posts">
+    <h1>{{post.title}}</h1>
+    <h2>{{post.id}}</h2>
+    <p> {{post.body}}</p>
+
+  </div>
+</div>
+
+<app-comments></app-comments>
+<app-albums>  </app-albums>
+<app-photos></app-photos>
+<app-todos></app-todos>
+<app-users></app-users>
+<app-post></app-post>
+
